# are-you-smarter-than-a-llm

./: Makefile  README.md  pyproject.toml
preprocessing/: README.md  dataset.csv  generate-multiple-choice.py  get-llm-leaderboard.py  get-llm-scores.py  quiz-with-llm-answers.json  quiz.json
webapp/: index.html  quiz.js
